fix: dark mode styling on blog

--- a/Hugo/static/css/style.css
+++ b/Hugo/static/css/style.css
@@ -14,10 +14,10 @@
     background-color: #333 !important;
   }
   code {
-    background-color: #535353;
+    background-color: #535353 !important;
   }
   .btn {
-    color: #535353;
+    color: #535353 !important;
   }
 }
 
